# voice-ai-qa-automation

./: .env.example  .gitattributes  .gitignore  DASHBOARD_PLAN.md  PLAN.md  README.md  pyproject.toml  voice_judge_qa_phase1_addendum_v2_rev.docx
.streamlit/: config.toml
backend/: audio.py  audio_mix.py  logging.py  openrouter.py  settings.py  url_builder.py
backend/browser/: __init__.py  fake_mic.py  fake_mic_init.js  launch.py  widget.py
backend/caller/: __init__.py  persona.py
backend/db/: __init__.py  engine.py  models.py  websites.py
backend/judge/: __init__.py  audio_judge.py  rubric.py  text_judge.py
backend/orchestrator/: __init__.py  call_runner.py  job_manager.py  suite.py  versioning.py
backend/qa_api/: __init__.py  client.py  models.py
backend/report/: __init__.py  aggregate.py  auth.py  coverage.py  dashboard.py  data.py  html_report.py  nav.py  rerun.py  run_controls.py  run_form.py  scenarios_table.py  site_targeting.py  theme.py
backend/report/views/: call_detail.py  overview.py  placeholders.py  profile.py  reports.py  rerun_page.py  run.py  (+2 more)
backend/scenarios/: __init__.py  generator.py  schema.py
backend/stt/: openai_stt.py
backend/tts/: __init__.py  base.py  edge_tts_provider.py  factory.py  openai_tts.py
docs/: DASHBOARD.md  OPS_C11_HANDOFF.md
scripts/: bare_widget_open.py  build_methodology_pdf.py  build_scenarios.py  capture_bot_audio_poc.py  inject_mic_poc.py  manage_users.py  probe_widget.py  qa_smoke_test.py  run_call.py  run_dashboard.ps1  run_persona_call.py  run_suite.py  verify_setup.py  vps_bootstrap.sh  vps_start.sh  vps_status.sh  vps_stop.sh
tests/: conftest.py
tests/integration/: test_auth_db.py  test_deploy_smoke.py  test_qa_health.py  test_reports_fixtures.py  test_rerun_dryrun.py  test_run_page_dryrun.py  test_run_suite_page.py  test_run_trigger_dryrun.py  test_run_website_dryrun.py  test_scenarios_page.py  test_siteid_roundtrip.py  test_smoke_live.py  test_suite_backcompat.py
tests/unit/: test_aggregate.py  test_auth.py  test_auth_profile.py  test_dashboard_data.py  test_deploy_config.py  test_full_call_mix.py  test_job_manager.py  test_job_name.py  test_persona.py  test_qa_api_client.py  test_report.py  test_rerun.py  test_run_controls.py  test_run_form.py  test_scenarios_table.py  test_site_targeting.py  test_smoke_and_auth.py  test_versioning.py  test_websites.py
