[project]
name = "bizfinder-voice-qa"
version = "0.1.0"
description = "Browser-driven QA harness for the BizFinder voice AI widget"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tenacity>=9.0",
    "aiolimiter>=1.1",
    "playwright>=1.49",
    "openai>=1.55",
    "soundfile>=0.12",
    "numpy>=1.26",
    "anyio>=4.6",
    "rich>=13.9",
    "typer>=0.13",
    "edge-tts>=7.0",
    "jinja2>=3.1",
    "imageio-ffmpeg>=0.5",
    # Auth + DB (C9): JWT tokens, bcrypt hashing, SQLAlchemy user store.
    # bcrypt is pinned <4.1 because passlib 1.7.x errors reading bcrypt>=4.1's version.
    "pyjwt>=2.9",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "respx>=0.21",
]
report = [
    "streamlit>=1.40",
    "weasyprint>=63",
    "jinja2>=3.1",
    "extra-streamlit-components>=0.1.71",  # CookieManager — JWT persists across refresh
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = [
    "E501",   # line length
    "B904",   # raise ... from err  (noisy, low value)
    "B008",   # function call in default argument (intentional for Path defaults)
    "SIM105", # contextlib.suppress (less readable than try/pass for one-liners)
    "SIM117", # combined with-statements (less readable when each ctx is heavy)
    "UP042",  # str + Enum vs StrEnum (3.11 compat — keep explicit)
    "RUF001", # ambiguous unicode (allow em-dash etc. in docstrings)
    "RUF046", # cast-to-int (intentional)
    "RUF059", # unused unpacked variable (test naming convenience)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits live BizFinder QA Read API (network + secret required)",
    "browser: spawns a real Chromium via Playwright",
    "slow: long-running end-to-end test (real suite run, minutes)",
]
